--- a/66-menu-modal-landing-page/style.css
+++ b/66-menu-modal-landing-page/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
-  --modal-duration: 1s;
+  --modal-duration: 0.5s;
   --primary-color: #293241;
   --secondary-color: #3d5a80;
 }
@@ -13,10 +13,15 @@
 body {
   font-family: 'Open Sans', sans-serif;
   margin: 0;
+  transition: transform 0.3s ease;
+}
+
+body.show-nav {
+  transform: translateX(200px);
 }
 
 nav {
-  background-color: var(--primary-color);
+  background-color: var(--secondary-color);
   border-right: 2px solid rgba(200, 200, 200, 0.1);
   color: #fff;
   position: fixed;
@@ -69,7 +74,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-  color: rgba(225, 225, 225, 0.9);
+  border-bottom: 2px solid var(--primary-color);
 }
 
 header {
@@ -90,6 +95,7 @@ header p {
 }
 
 button, input[type='submit'] {
+  font-family: inherit;
   background-color: var(--secondary-color);
   border: none;
   border-radius: 5px;
@@ -131,6 +137,10 @@ button:focus {
   bottom: 0;
 }
 
+.modal-container.show-modal {
+  display: block;
+}
+
 .modal {
   background-color: #fff;
   border-radius: 5px;
@@ -142,6 +152,8 @@ button:focus {
   transform: translate(-50%, -50%);
   max-width: 100%;
   width: 400px;
+  animation-name: modalOpen;
+  animation-duration: var(--modal-duration);
 }
 
 .modal-header {
@@ -184,4 +196,14 @@ button:focus {
   position: absolute;
   top: 5px;
   right: 0;
+}
+
+@keyframes modalOpen {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
