--- a/67-hangman/style.css
+++ b/67-hangman/style.css
@@ -12,7 +12,7 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: 'Poppins', sans-serif;
-  background-color: #34495e;
+  background-color: #264653;
   color: #fff;
 }
 
@@ -62,7 +62,7 @@ h1 {
 }
 
 .letter {
-  border-bottom: 3px solid #2980b9;
+  border-bottom: 3px solid #2a9d8f;
   display: inline-flex;
   font-size: 30px;
   align-items: center;
@@ -86,7 +86,7 @@ h1 {
 }
 
 .popup {
-  background: #2980b9;
+  background: #264653;
   border-radius: 5px;
   box-shadow: 0 15px 10px 3px rgba(0, 0, 0, 0.1);
   padding: 30px 100px;
@@ -96,13 +96,17 @@ h1 {
 .popup button {
   cursor: pointer;
   font-family: inherit;
-  background-color: #fff;
-  color: #2980b9;
-  border: none;
+  background-color: rgba(0, 0, 0, 0.3);
+  color: #fff;
+  border: 2px solid transparent;
   margin-top: 20px;
   padding: 12px 20px;
   font-size: 16px;
 
+}
+
+.popup button:hover {
+  border-color: #2a9d8f;
 }
 
 .popup button:focus {
