--- a/68-recipe-finder/style.css
+++ b/68-recipe-finder/style.css
@@ -1,1 +1,73 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+* {
+  box-sizing: border;
+}
+
+body {
+  background-color: #15616d;
+  color: #fff;
+  font-family: 'Lato', sans-serif;
+  margin: 0;
+}
+
+.container {
+  margin: auto;
+  max-width: 800px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.flex {
+  display: flex;
+}
+
+input, button {
+  color: #fff;
+  font-family: inherit;
+  background-color: rgba(0, 0, 0, 0.4);
+  border: 1px solid rgba(225, 225, 225, 0.3);
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  font-size: 14px;
+  padding: 8px 10px;
+  margin: 0;
+}
+
+button:active {
+  transform: scale(0.98);
+}
+
+input[type="text"] {
+  width: 200px;
+}
+
+input[type="text"]:focus {
+  outline: none;
+}
+
+.search-btn {
+  cursor: pointer;
+  border-left: 0;
+  border-radius: 0;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.random-btn {
+  cursor: pointer;
+  margin-left: 10px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+@media(max-width: 800px) {}
+@media(max-width: 700px) {}
+@media(max-width: 500px) {
+  input[type="text"] {
+    width: 100%;
+  }
+}
