--- a/68-recipe-finder/style.css
+++ b/68-recipe-finder/style.css
@@ -25,6 +25,19 @@ body {
   display: flex;
 }
 
+.error-text {
+  display: none;
+  margin-right: 10%;
+  text-align: left;
+  font-size: 14px;
+  width: 200px;
+  padding: 10px 12px;
+}
+
+.error-text.show {
+  display: block;
+}
+
 input, button {
   color: #fff;
   font-family: inherit;
@@ -67,6 +80,44 @@ input[type="text"]::placeholder {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
+
+.recipes {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+  margin-top: 20px;
+}
+
+.recipe {
+  cursor: pointer;
+  position: relative;
+  height: 180px;
+  width: 180px;
+  text-align: center;
+}
+
+.recipe img {
+  width: 100%;
+  height: 100%;
+  border: 4px rgba(0, 0, 0, 0.4) solid;
+  border-radius: 2px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+}
+
+.recipe-info {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: opacity 0.2s ease-in;
+  opacity: 0;
+}
+
 
 @media(max-width: 800px) {}
 @media(max-width: 700px) {}
