--- a/68-recipe-finder/style.css
+++ b/68-recipe-finder/style.css
@@ -126,10 +126,76 @@ input[type="text"]::placeholder {
   opacity: 1;
 }
 
-@media(max-width: 800px) {}
-@media(max-width: 700px) {}
+.single-recipe {
+  margin: 30px auto;
+  width: 70%;
+}
+
+.single-recipe img {
+  width: 300px;
+  margin: 15px;
+  border: 4px rgba(0, 0, 0, 0.4) solid;
+  border-radius: 2px;
+}
+
+.single-recipe-info {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.single-recipe-info p {
+  background-color: rgba(0, 0, 0, 0.4);
+  line-height: 1.5;
+  padding: 10px 15px;
+  margin: 0 12px;
+  border-radius: 5px;
+}
+
+.main p {
+  background-color: rgba(0, 0, 0, 0.2);
+  padding: 18px 15px;
+  border-radius: 4px;
+  line-height: 1.5;
+  margin: 30px 0;
+}
+
+.single-recipe ul {
+  text-transform: capitalize;
+  text-align: left;
+  padding-left: 0;
+  list-style-type: disc;
+  line-height: 2;
+  margin-left: 30px;
+}
+
+@media(max-width: 800px) {
+  .recipes {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media(max-width: 700px) {
+  .recipes {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .recipe {
+    height: 200px;
+    width: 200px;
+  }
+}
 @media(max-width: 500px) {
   input[type="text"] {
     width: 100%;
+  }
+
+  .recipes {
+    grid-template-columns: 1fr;
+  }
+
+  .recipe {
+    height: 300px;
+    width: 300px;
   }
 }
