--- a/69-expense-tracker/style.css
+++ b/69-expense-tracker/style.css
@@ -117,6 +117,11 @@ input[type='number']:focus {
   background-color: rgba(0, 0, 0, 0.9);
 }
 
+.btn:focus,
+.delete-btn:focus {
+  outline: none;
+}
+
 .list {
   list-style-type: none;
   padding: 0;
@@ -159,6 +164,6 @@ input[type='number']:focus {
 }
 
 .list li:hover .delete-btn {
-  transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
   opacity: 1;
 }
