--- a/69-expense-tracker/style.css
+++ b/69-expense-tracker/style.css
@@ -2,6 +2,8 @@
 
 :root {
   --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  --plus-color: #2ecc71;
+  --minus-color: #c0392b;
 }
 
 * {
@@ -65,11 +67,11 @@ h4 {
 }
 
 .money.plus {
-  color: #2ecc71;
+  color: var(--plus-color);
 }
 
 .money.minus {
-  color: #c0392b;
+  color: var(--minus-color);
 }
 
 label {
@@ -102,7 +104,7 @@ input[type='number']:focus {
 .btn {
   cursor: pointer;
   font-family: inherit;
-  background-color: #333;
+  background-color: rgb(38, 70, 83);
   color: #fff;
   box-shadow: var(--box-shadow);
   border: none;
@@ -114,7 +116,7 @@ input[type='number']:focus {
 }
 
 .btn:hover {
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: #023047;
 }
 
 .btn:focus,
@@ -140,17 +142,17 @@ input[type='number']:focus {
 }
 
 .list li.minus {
-  border-right: 5px solid #c0392b;
+  border-right: 5px solid var(--minus-color);
 }
 
 .list li.plus {
-  border-right: 5px solid #2ecc71;
+  border-right: 5px solid var(--plus-color);
 }
 
 .delete-btn {
   cursor: pointer;
   font-family: inherit;
-  background-color: #e74c3c;
+  background-color: var(--minus-color);
   border: 0;
   color: #fff;
   font-size: 20px;
