--- a/77-typing-game/style.css
+++ b/77-typing-game/style.css
@@ -79,7 +79,7 @@ select:focus, button:focus {
 }
 
 h1 {
-  color: rgba(0, 0, 0, 0.6);
+  color: rgba(0, 0, 0, 0.8);
   margin: 0;
 }
 
@@ -104,12 +104,8 @@ input:focus {
   right: 25px;
 }
 
-.score {
-  color: rgba(0, 0, 0, 0.6);
-}
-
-.time {
-  color: rgba(0, 0, 0, 0.6);
+.score, .time {
+  color: #4E4C79;
 }
 
 .time-container {
@@ -130,4 +126,16 @@ input:focus {
   width: 100%;
   height: 100%;
   z-index: 1;
+}
+
+.end-game-container button {
+  font-family: inherit;
+  border: 1px solid #7573A2;
+  background-color: #7573A2;
+  color: #fff;
+}
+
+.end-game-container button:hover {
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+
 }
